<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlouniwersalne"
    tools:context=".Ankieta">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="154dp"
        android:layout_height="39dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="110dp"
        android:text="@string/textankieta"
        android:textColor="#100F0F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="249dp"
        android:layout_height="536dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="62dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#651FFF"
                android:foregroundTint="#00651FFF"
                android:text="@string/checkbox" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#651FFF"
                android:text="@string/checkbox2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#651FFF"
                android:text="@string/checkbox3" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#651FFF"
                android:text="@string/checkbox4" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#651FFF"
                android:text="@string/checkbox5" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#651FFF"
                android:text="@string/checkbox6" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#278E7ABA"
                android:text="@string/buttonglosuj"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="374dp"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieOdliczaj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejsciePlanuj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieSzukaj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieKalendarz"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieKonto"
            tools:ignore="SpeakableTextPresentCheck" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>