<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/plannerweselny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planner_weselny"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/reglogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputlogin"
        android:backgroundTint="@color/purple_500"
        android:drawableStart="@drawable/usericon"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plannerweselny"
        tools:ignore="Autofill,LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/inputlogin"
        android:backgroundTint="@color/purple_500"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/e_mail1"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reglogin"
        tools:ignore="Autofill,LabelFor,TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/reghaslo"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputlogin"
        android:backgroundTint="@color/purple_500"
        android:drawableStart="@drawable/securitypassword"
        android:ems="10"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regemail"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/reghaslo2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputlogin"
        android:backgroundTint="@color/purple_500"
        android:drawableStart="@drawable/securitypassword"
        android:ems="10"
        android:hint="@string/potwierd_has_o"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reghaslo"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/zarejestrujsie"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/zarejestrujsi"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/powrot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reghaslo2"
        app:layout_constraintVertical_bias="0.406"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/powrot"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginBottom="192dp"
        android:text="@string/powr_t"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>