<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlouniwersalne"
    tools:context=".KontoActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="570dp"
        android:text="@string/textViewKonto"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="413dp"
        android:layout_height="102dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <Button
            android:id="@+id/button15"
            android:layout_width="92dp"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieOdliczaj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejsciePlanuj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieSzukaj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieKalendarz"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            tools:ignore="SpeakableTextPresentCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustawienia"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="191dp"
        app:drawableEndCompat="@drawable/settings" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wyloguj_si"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="251dp"
        app:drawableEndCompat="@drawable/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>