<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlouniwersalne"
    tools:context=".dodajStol">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="278dp"
        android:layout_height="59dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/stol"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/checkboxContainer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/checkboxContainer3"
        android:layout_width="278dp"
        android:layout_height="212dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"></LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="413dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button36"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieOdliczaj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button37"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejsciePlanuj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button38"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieSzukaj"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button39"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieKalendarz"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button40"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="przejscieKonto"
            tools:ignore="SpeakableTextPresentCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="137dp"
        android:text="@string/stol2"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button41"
        android:layout_width="307dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="168dp"
        android:background="#278E7ABA"
        android:text="@string/buttonglosuj"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>